--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <link rel="stylesheet" href="index.css">
 
 <body>
+    <div class="AB">
     <div class="A">Add Gradient Text Box in Weebly</div>
     <div class="a">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, vel repellat sequi,
         consectetur eum laudantium incidunt libero aut totam ex eligendi animi, porro quibusdam voluptas cumque
         recusandae quisquam veniam tenetur.</div>
         <div class="b">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, qui?</div>
-
+    </div>
 </body>
 
 </html>
